--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,16 @@
     <string name="title_activity_home">HomeActivity</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_text_1">Learning Leaders</string>
+    <string name="tab_text_2">Skill IQ Leaders</string>
+    <string name="learner_stats">learner stats</string>
+    <string name="badge_image">badge image</string>
+    <string name="yes11">Yes</string>
+    <string name="are_you_sure">Are you sure</string>
+    <string name="po_box">po box</string>
+    <string name="email">email</string>
+    <string name="link">link</string>
+    <string name="submit">Submit</string>
+    <string name="submission_successful">Submission Successful</string>
+    <string name="submt">Submit</string>
 </resources>
